--- a/src/panels/Home/Home.module.scss
+++ b/src/panels/Home/Home.module.scss
@@ -63,12 +63,25 @@
     justify-content: center;
     align-content: center;
 }
+
+.newProjectButton button {
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.newProjectButton button:hover {
+    transform: scale(1.05);
+}
+
 .categoriesMenu {
     text-align: left;
 }
-.searchContainer {
-
+.searchContainer input:focus {
 }
+.searchContainer input:hover {
+}
+
+
+
 
 .categoriesList {
     padding: 0;
@@ -80,10 +93,10 @@
     border-radius: 10px;
 }
 
-.projectsContainer {
-
+.categoriesListItem {
+    transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-.rootrow {
-
+.categoriesListItem:hover {
+    transform: scale(1.05);
 }
